<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">

    <TableRow
        android:background="#004d40"
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_span="6"
            android:textAlignment="center"
            android:gravity="center"/>



    </TableRow>

    <TableRow
        android:background="#00796b"
        android:layout_weight="1"

        >

        <TextView
            android:text="@string/p2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_span="2"

            />

        <TextView
            android:text="@string/p3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_span="2"

            />

        <TextView
            android:text="@string/p4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_span="2"

            />

    </TableRow>

    <TableRow
        android:background="#f9a825"
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"


            />

        <TextView
            android:text="@string/p6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

        <TextView
            android:text="@string/p7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

        <TextView
            android:text="@string/p8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

        <TextView
            android:text="@string/p9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

        <TextView
            android:text="@string/p10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />

    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:text="@string/p12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />


    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:text="@string/p13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />



    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:text="@string/p14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />



    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:text="@string/p15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />


    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:text="@string/p16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />



    </TableRow>

    <TableRow
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p17"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p18"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/p19"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        >

        <TextView
            android:text="@string/c18"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_span="6"

            />

    </TableRow>



</TableLayout>